--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-Action
-enum34
-matplotlib
-numpy 
-pandas
-parse
-pandas
-seaborn
-tqdm
-ez_setup
+action==1.4.4
+collection==0.1.6
+cycler==0.11.0
+enum34==1.1.10
+ez-setup==0.9
+fonttools==4.28.5
+Janome==0.4.1
+kiwisolver==1.3.2
+matplotlib==3.5.1
+mecab-python3==1.0.4
+numpy==1.21.5
+packaging==21.3
+pandas==1.3.5
+parse==1.19.0
+Pillow==8.4.0
+pkg_resources==0.0.0
+pyparsing==3.0.6
+python-dateutil==2.8.2
+pytz==2021.3
+scipy==1.7.3
+seaborn==0.11.2
+six==1.16.0
+tqdm==4.62.3
+unidic-lite==1.0.8
+wordcloud==1.8.1
